[package]
name = "weng-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bitflags = "1.3.2"
bytemuck = { version = "1.13.0", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.23.0"
glfw = "0.51.0"
image = "0.24.5"
lazy_static = "1.4.0"
log = "0.4.17"
raw-window-handle = "0.5.0"
strum = { version = "0.24.1", features = ["derive"] }
tobj = "3.2.4"
weng = { path = "../weng" }
